--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,4 @@
-*.swp
-package-lock.json
-__pycache__
-.pytest_cache
-.venv
-*.egg-info
-
-# CDK asset staging directory
-.cdk.staging
-cdk.out
+# Default ignored files
+/shelf/
+/workspace.xml
+/idea
